add about the sal and update styles

--- a/index.html
+++ b/index.html
@@ -29,18 +29,30 @@
     <section class="container-backgorund"></section>
     <article class="container-article">
       <header class="header-article">
-        <h3 class="h3welcome">Bem-Vindo ao</h3>
-        <h1>O Sal Gastronomia</h1>
+        <h3 class="h3-welcome">Bem-Vindo ao</h3>
+        <h1>Sal Gastronomia</h1>
       </header>
-      <section class="welcome">
-        <p>A cozinha do SAL é marcada pelo tempero acentuado e qualidade dos ingredientes, e uma forte característica do Chef Henrique Fogaça, que é não ter medo de errar e ousar em suas criações.</p>
-        <br>
+      <section class="p-welcome">
+        <p class="p-ident">A cozinha do SAL é marcada pelo tempero acentuado e qualidade dos ingredientes, e uma forte característica do Chef Henrique Fogaça, que é não ter medo de errar e ousar em suas criações.</p>
         <p>
         O cardápio segue a linha brasileira contemporânea, com criações exclusivas. 
         </p>
-        <br>
         <p>Mais do que comida boa, aqui no SAL você viverá uma experiência gastronômica, em um ambiente aconchegante, com uma equipe pronta para lhe atender.</p>
       </section>
+      <section class="container-background2"></section>
+      <section class="the-sal">
+        <h2 class="h2-the-sal">O SAL</h2>
+        <p class="p-ident">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, aliquam, perspiciatis molestiae aspernatur beatae quidem accusantium voluptatum error distinctio eligendi, reprehenderit est deserunt. Veniam iusto voluptas enim exercitationem aspernatur vero!</p>
+        <img class="img-the-sal" src="imagens/sal12 3.svg" alt="Foto do restarurante Sal Gastronomia">
+      </section>
+      <section class="the-sal2">
+        <p class="p-ident">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, aliquam, perspiciatis molestiae aspernatur beatae quidem accusantium voluptatum error distinctio eligendi, reprehenderit est deserunt. Veniam iusto voluptas enim exercitationem aspernatur vero!</p>
+        <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa iure fuga accusantium voluptates quia. Quisquam perferendis facere sed ex. Ex beatae in incidunt exercitationem labore molestiae eius libero aspernatur inventore! 
+        </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste dolorum, fugit blanditiis laboriosam rerum quas quae exercitationem aliquam quibusdam, aut, excepturi explicabo ullam consectetur culpa rem cum expedita possimus perferendis.</p>
+      </section>
+      <section class="container-backgorund2"></section>
     </article>
   </main>
 
