update about the sal section image

--- a/index.html
+++ b/index.html
@@ -43,13 +43,11 @@
       <section class="the-sal">
         <h2 class="h2-the-sal">O SAL</h2>
         <p class="p-ident">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, aliquam, perspiciatis molestiae aspernatur beatae quidem accusantium voluptatum error distinctio eligendi, reprehenderit est deserunt. Veniam iusto voluptas enim exercitationem aspernatur vero!</p>
-        <img class="img-the-sal" src="imagens/sal12 3.svg" alt="Foto do restarurante Sal Gastronomia">
+        <img class="img-the-sal" src="imagens/sal3.svg" alt="Foto do restarurante Sal Gastronomia">
       </section>
       <section class="the-sal2">
         <p class="p-ident">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, aliquam, perspiciatis molestiae aspernatur beatae quidem accusantium voluptatum error distinctio eligendi, reprehenderit est deserunt. Veniam iusto voluptas enim exercitationem aspernatur vero!</p>
-        <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa iure fuga accusantium voluptates quia. Quisquam perferendis facere sed ex. Ex beatae in incidunt exercitationem labore molestiae eius libero aspernatur inventore! 
-        </p>
+        <img class="img-the-sal" src="imagens/sal2.svg" alt="Foto do restarurante Sal Gastronomia">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste dolorum, fugit blanditiis laboriosam rerum quas quae exercitationem aliquam quibusdam, aut, excepturi explicabo ullam consectetur culpa rem cum expedita possimus perferendis.</p>
       </section>
       <section class="container-backgorund2"></section>
