--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     </menu> -->
   </header>
   <main>
-    <section class="container-backgorund"></section>
+    <section class="container-backgorund">
+      <!-- <img src="imagens/sal1.svg" alt="Foto do restarurante Sal Gastronomia"> -->
+    </section>
     <article class="container-article">
       <header class="header-article">
         <h3 class="h3-welcome">Bem-Vindo ao</h3>
@@ -47,7 +49,7 @@
       </section>
       <section class="the-sal2">
         <p class="p-ident">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, aliquam, perspiciatis molestiae aspernatur beatae quidem accusantium voluptatum error distinctio eligendi, reprehenderit est deserunt. Veniam iusto voluptas enim exercitationem aspernatur vero!</p>
-        <img class="img-the-sal" src="imagens/sal2.svg" alt="Foto do restarurante Sal Gastronomia">
+        <img class="img-the-sal" src="imagens/sal4.svg" alt="Foto do restarurante Sal Gastronomia">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste dolorum, fugit blanditiis laboriosam rerum quas quae exercitationem aliquam quibusdam, aut, excepturi explicabo ullam consectetur culpa rem cum expedita possimus perferendis.</p>
       </section>
       <section class="container-backgorund2"></section>
