add menu and brazilian cousine sections

--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
     </menu> -->
   </header>
   <main>
-    <section class="container-backgorund">
-      <!-- <img src="imagens/sal1.svg" alt="Foto do restarurante Sal Gastronomia"> -->
-    </section>
+    <section class="container-backgorund"></section>
+
     <article class="container-article">
+
       <header class="header-article">
         <h3 class="h3-welcome">Bem-Vindo ao</h3>
         <h1>Sal Gastronomia</h1>
       </header>
+
       <section class="p-welcome">
         <p class="p-ident">A cozinha do SAL é marcada pelo tempero acentuado e qualidade dos ingredientes, e uma forte característica do Chef Henrique Fogaça, que é não ter medo de errar e ousar em suas criações.</p>
         <p>
@@ -41,18 +42,45 @@
         </p>
         <p>Mais do que comida boa, aqui no SAL você viverá uma experiência gastronômica, em um ambiente aconchegante, com uma equipe pronta para lhe atender.</p>
       </section>
+
       <section class="container-background2"></section>
+
       <section class="the-sal">
         <h2 class="h2-the-sal">O SAL</h2>
         <p class="p-ident">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, aliquam, perspiciatis molestiae aspernatur beatae quidem accusantium voluptatum error distinctio eligendi, reprehenderit est deserunt. Veniam iusto voluptas enim exercitationem aspernatur vero!</p>
         <img class="img-the-sal" src="imagens/sal3.svg" alt="Foto do restarurante Sal Gastronomia">
       </section>
+
       <section class="the-sal2">
         <p class="p-ident">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, aliquam, perspiciatis molestiae aspernatur beatae quidem accusantium voluptatum error distinctio eligendi, reprehenderit est deserunt. Veniam iusto voluptas enim exercitationem aspernatur vero!</p>
         <img class="img-the-sal" src="imagens/sal4.svg" alt="Foto do restarurante Sal Gastronomia">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste dolorum, fugit blanditiis laboriosam rerum quas quae exercitationem aliquam quibusdam, aut, excepturi explicabo ullam consectetur culpa rem cum expedita possimus perferendis.</p>
       </section>
+
       <section class="container-backgorund2"></section>
+
+      <section class="menu-food">
+        <h3>SAL GASTRONOMIA</h3>
+        <h2>MENU</h2>
+        <ul>
+          <li><a href="#">ENTRADAS</a></li>
+          <li><a href="#">PRATOS PRINCIPAIS</a></li>
+          <li><a href="#">MENU EXECUTIVO</a></li>
+          <li><a href="#">MENU INFANTIL</a></li>
+          <li><a href="#">SOBREMESAS</a></li>
+          <li><a href="#">BEBIDAS</a></li>
+        </ul>
+      </section>
+
+      <section class="brazilian-cuisine">
+        <h2>Cozinha Brasileira</h2>
+        <h3>Contemporânea</h3>
+        <p class="p1-brazilian-cousine">Dentre as entras, o famoso Steak Tartare de mignom com ovo de codorna frito e batata chips e a Polenta Cremosa com linguiça e requeijão ao molho de tomate, são os mais pedidos</p>
+        <img class="img-the-sal" src="imagens/fogaça-steak-tartare-brazilian-cousine.svg" alt="Foto do chef Henrique Fogaça">
+        <p class="p2-brazilian-cousine">Na escolha dos principais, o famoso Aligot é o prato mais pedido da casa, e em sua composição voce aprecia um Lombo de Cordeiro com um delicioso Purê de dois Queijos, Cogumelos e Molho de Jabuticaba.</p>
+        <img class="img-the-sal" src="imagens/fogaça-aligot-brazilian-cousine.svg" alt="Foto do chef Henrique Fogaça">
+      </section>
+
     </article>
   </main>
 
