--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <section class="container-background2"></section>
 
       <section class="the-sal">
-        <h2 class="h2-the-sal">O SAL</h2>
+        <h2 class="h2-the-sal">O Sal</h2>
         <p class="p-ident">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, aliquam, perspiciatis molestiae aspernatur beatae quidem accusantium voluptatum error distinctio eligendi, reprehenderit est deserunt. Veniam iusto voluptas enim exercitationem aspernatur vero!</p>
         <img class="img-the-sal" src="imagens/sal3.svg" alt="Foto do restarurante Sal Gastronomia">
       </section>
@@ -54,7 +54,7 @@
       <section class="the-sal2">
         <p class="p-ident">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, aliquam, perspiciatis molestiae aspernatur beatae quidem accusantium voluptatum error distinctio eligendi, reprehenderit est deserunt. Veniam iusto voluptas enim exercitationem aspernatur vero!</p>
         <img class="img-the-sal" src="imagens/sal4.svg" alt="Foto do restarurante Sal Gastronomia">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste dolorum, fugit blanditiis laboriosam rerum quas quae exercitationem aliquam quibusdam, aut, excepturi explicabo ullam consectetur culpa rem cum expedita possimus perferendis.</p>
+        <p class="last-p-the-sal2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste dolorum, fugit blanditiis laboriosam rerum quas quae exercitationem aliquam quibusdam, aut, excepturi explicabo ullam consectetur culpa rem cum expedita possimus perferendis.</p>
       </section>
 
       <section class="container-backgorund2"></section>
