update login section and create form login

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header class="header">
-    <a href="#"><img  class="logo-header" src="imagens/logo-sal___106,3x90.svg"></a>
+    <a href="login.html"><img  class="logo-header" src="imagens/logo-sal___106,3x90.svg"></a>
     <!-- <menu class="container-menu">
       <nav>
         <ul class="menu-itens">
