--- a/login.html
+++ b/login.html
@@ -5,7 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="estilos/login.css">
+  <link rel="stylesheet" href="estilos/login-media-query.css">
 </head>
 <body>
   <main>
@@ -14,8 +16,19 @@
       <div id="formulario">
         <h1>Login</h1>
         <p>Seja bem-vindo(a). Faça login para acessa sua conta e realizar sua reserva!</p>
-        <form action="login.php" method="post">
-
+        <form action="login.php" method="post" autocomplete="on">
+          <div class="box-login">
+            <span class="material-icons">alternate_email</span>
+            <input type="email" name="login" id="ilogin" placeholder="Digite seu e-mail" autocomplete="email" required minlength="1" maxlength="50">
+            <label for="ilogin"></label>
+          </div>
+          <div class="box-login">
+            <span class="material-icons">key</span>
+            <input type="password" name="senha" id="isenha" placeholder="Digite sua senha" required minlength="8">
+            <label for="isenha"></label>
+          </div>
+          <input type="submit" value="Entrar">
+          <a href="esqueci.html">Esqueci a senha <span class="material-icons">help_outline</span> </a>
         </form>
       </div>
     </section>
