--- a/login.html
+++ b/login.html
@@ -12,23 +12,30 @@
 <body>
   <main>
     <section id="login">
+
       <div id="imagem"></div>
+
       <div id="formulario">
         <h1>Login</h1>
         <p>Seja bem-vindo(a). Faça login para acessa sua conta e realizar sua reserva!</p>
         <form action="login.php" method="post" autocomplete="on">
+
           <div class="box-login">
             <span class="material-icons">alternate_email</span>
             <input type="email" name="login" id="ilogin" placeholder="Digite seu e-mail" autocomplete="email" required minlength="1" maxlength="50">
-            <label for="ilogin"></label>
+            <label for="ilogin">Email</label>
           </div>
+
           <div class="box-login">
             <span class="material-icons">key</span>
             <input type="password" name="senha" id="isenha" placeholder="Digite sua senha" required minlength="8">
-            <label for="isenha"></label>
+            <label for="isenha">Senha</label>
           </div>
+
           <input type="submit" value="Entrar">
-          <a href="esqueci.html">Esqueci a senha <span class="material-icons">help_outline</span> </a>
+
+          <a class="esquecisenha" href="esqueci.html">Esqueceu a senha <span class="material-icons">help_outline</span> </a>
+
         </form>
       </div>
     </section>
