update and finished login screen

--- a/login.html
+++ b/login.html
@@ -34,7 +34,9 @@
 
           <input type="submit" value="Entrar">
 
-          <a class="esquecisenha" href="esqueci.html">Esqueceu a senha <span class="material-icons">help_outline</span> </a>
+          <a class="esquecisenha" href="esqueci.html">Esqueci a senha <span class="material-icons">help_outline</span> </a>
+
+          <p id="p-cadastro">Novo por aqui? <a href="cadastro.html">Cadastre-se</a> e venha para <strong>O SAL</strong>.</p>
 
         </form>
       </div>
